clusters/beryjuio-home/istio-system/ddns.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddns
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ddns
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ddns
    spec:
      containers:
        - name: ddns
          image: ghcr.io/crazy-max/ddns-route53:2.13.0
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumeMounts:
        - name: aws-creds
          mountPath: /run/aws-creds
          readOnly: true
  volumes:
    - name: aws-creds
      secret:
        secretName: beryjuio-ddns
