clusters/beryjuio-home/istio-system/hass-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-hass
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: proxy
      app.kubernetes.io/instance: hass
  template:
    metadata:
      labels:
        app.kubernetes.io/name: proxy
        app.kubernetes.io/instance: hass
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: proxy
          image: ghcr.io/beryju/istio-proxy
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-hass
  namespace: istio-system
spec:
  ports:
    - name: http
      port: 8888
      protocol: TCP
      targetPort: 8888
  selector:
    app.kubernetes.io/name: proxy
    app.kubernetes.io/instance: hass
  type: ClusterIP
